--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <tr>
               <td align="center">
                 <img
-                  src="website2.jpg"
+                  src="http://127.0.0.1:5500/website2.jpg"
                   width="980"
                   height="300"
                   alt="Img not found"
