--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             <tr>
               <td align="center">
                 <img
-                  src="http://127.0.0.1:5500/website2.jpg"
+                  src="https://natureconservancy-h.assetsadobe.com/is/image/content/dam/tnc/nature/en/photos/Zugpsitze_mountain.jpg?crop=0,176,3008,1654&wid=4000&hei=2200&scl=0.752"
                   width="980"
                   height="300"
                   alt="Img not found"
